crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_comments_3.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "If": {
          "condition": {
            "kind": {
              "Int": 42
            },
            "span": {
              "start": 22,
              "end": 24
            }
          },
          "then_branch": {
            "kind": {
              "Block": []
            },
            "span": {
              "start": 26,
              "end": 28
            }
          },
          "elseif_branches": [],
          "else_branch": null
        }
      },
      "span": {
        "start": 18,
        "end": 28
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 28
  }
}
