crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_emptyfile.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [],
  "span": {
    "start": 0,
    "end": 0
  }
}
