crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_errorhandling_recovery_10.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "foo",
          "params": [],
          "body": [
            {
              "kind": {
                "Expression": {
                  "kind": {
                    "PropertyAccess": {
                      "object": {
                        "kind": {
                          "Variable": "bar"
                        },
                        "span": {
                          "start": 27,
                          "end": 31
                        }
                      },
                      "property": {
                        "kind": "Error",
                        "span": {
                          "start": 34,
                          "end": 35
                        }
                      }
                    }
                  },
                  "span": {
                    "start": 27,
                    "end": 35
                  }
                }
              },
              "span": {
                "start": 27,
                "end": 34
              }
            }
          ],
          "return_type": null,
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 35
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 35
  }
}
